Validation and pages for payment options
Added validation to all registration fields, passwords can not be empty, clicking next when all information is valid starts the corresponding payment activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,9 @@
                 <category android:name="android.intent.category.LAUNCHER"></category>
             </intent-filter>
         </activity>
-        <activity android:name=".RegisterActivity">
-        </activity>
+        <activity android:name=".RegisterActivity"/>
+        <activity android:name=".PaypalActivity"/>
+        <activity android:name=".CreditcardActivity"/>
+        <activity android:name=".InvoiceActivity"/>
     </application>
 </manifest>
