View for forgotpassword

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,5 +18,6 @@
         <activity android:name=".PaypalActivity"/>
         <activity android:name=".CreditcardActivity"/>
         <activity android:name=".InvoiceActivity"/>
+        <activity android:name=".ForgotPasswordActivity"/>
     </application>
 </manifest>
