--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="se.ju.waka1500student.projectisaberg">
-
+    <uses-permission android:name="android.permission.NFC" />
+    <uses-sdk android:minSdkVersion="10"/>
+    <uses-feature android:name="android.hardware.nfc" android:required="true" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,14 +13,25 @@
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"></action>
-                <category android:name="android.intent.category.LAUNCHER"></category>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".RegisterActivity"/>
-        <activity android:name=".PaypalActivity"/>
-        <activity android:name=".CreditcardActivity"/>
-        <activity android:name=".InvoiceActivity"/>
-        <activity android:name=".ForgotPasswordActivity"/>
+        <activity android:name=".RegisterActivity" />
+        <activity android:name=".PaypalActivity" />
+        <activity android:name=".CreditcardActivity" />
+        <activity android:name=".InvoiceActivity" />
+        <activity android:name=".ForgotPasswordActivity" />
+        <activity
+            android:name=".NfcTask"
+            android:label="@string/title_activity_nfc_task">
+            <intent-filter>
+                <action android:name="android.nfc.action.TECH_DISCOVERED"/>
+                <action android:name="android.nfc.action.TAG_DISCOVERED" />
+            </intent-filter>
+
+        </activity>
     </application>
+
 </manifest>
