added account info view, and menu-view but menu view is not in use yet

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
                 <action android:name="android.nfc.action.TAG_DISCOVERED" />
             </intent-filter>
         </activity>
+        <activity android:name=".AccountInfoActivity"></activity>
     </application>
 
 </manifest>
